#changed the $ to RM

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>Daily Report</h3>
             <input type="date" id="reportDate" onchange="fetchReport()">
             <div class="stats">
-                <p>Total: <span id="dayTotal">$0.00</span></p>
+                <p>Total: <span id="dayTotal">RM0.00</span></p>
                 <p>Best Seller: <span id="bestSeller">-</span></p>
             </div>
         </div>
